k8s/rag-srv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rag-depl
spec:
  relicas: 1
  selector:
    matchLabels:
      app: rag
  template:
    metadata:
      labels:
        app: rag
    spec:
      containers:
        - name: rag
          image: ishanjoshi25/multimodelrag:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              nvidia.com/gpu: 1
      tolerations:
        - key: "nvidia.com/gpu"
          operator: "Exists"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: rag-srv
spec:
  selector:
    app: rag
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
