k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: multimodelrag.dev
      http:
        paths:
          - path: /api/image/?(.*)
            backend:
              serviceName: image-srv
              servicePort: 3000
          - path: /api/text/?(.*)
            backend:
              serviceName: text-srv
              servicePort: 3000
          - path: /api/rag/?(.*)
            backend:
              serviceName: rag-srv
              servicePort: 3000
